samples/_failures_safe/1761159832_f12364_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e05334d6.c: In function ‘dequeue’:
./samples/SAFE/__tmp_e05334d6.c:172:5: error: expected ‘,’ or ‘;’ at end of input
  172 |     int item = q
      |     ^~~
./samples/SAFE/__tmp_e05334d6.c:172:5: error: expected declaration or statement at end of input
